Fixed overflow on state map with small screen

--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,9 @@ a {
   .drawer-link {
     display: contents !important;
   }
+   .map-card{
+    overflow: scroll;
+  }
   /* .nav {
     display: none;
   } */
